<resources>
    <string name="app_name">MarKus</string>

    <!--_________________________________ CONNEXION _________________________________-->
    <string name="glisserVersLaGaucheInscription">Glisser vers la gauche (Inscription)</string>

    <string name="connexion">Connexion</string>
    <string name="motDePasseConnexion">Mot de passe</string>
    <string name="nomConnexion">Nom</string>

    <!--_________________________________ INSCRIPTION _________________________________-->
    <string name="glisserVersLaDroiteConnexion">Glisser vers la droite (Connexion)</string>

    <string name="inscription">Créer un compte</string>
    <string name="motDePasseInscription">Mot de passe</string>
    <string name="reEcrireMotDePasseInscription">Réécrire votre mot de passe</string>
    <string name="nomUserInscription">Nom</string>

    <!--_________________________________ CATALOGUE _________________________________-->
    <string name="catalogue">Catalogue de motif(s)</string>

    <!-- AFFICHAGE ALERTDIALOG -->
    <string name="nomMotifAlertDialog">Nom du motif</string>
    <string name="dateMotifAlertDialog">Date de création</string>
    <string name="createurMotifAlertDialog">Créateur du motif</string>


    <!--_________________________________ AJOUTER _________________________________-->
    <string name="ajouterMotif">Ajouter un motif</string>
    <string name="creerMotifUnity">Créer un motif dans Unity</string>
    <string name="aideBoutonUnityAjout">Créer un motif dans Unity</string>

    <string name="UnityAjoutMotifTitre">Unity</string>
    <string name="champsUnity">Json</string>

    <string name="nomAjoutMotifTitre">Nom</string>
    <string name="champsNom">Nom du motif</string>

    <string name="imageAjoutMotifTitre">Image</string>
    <string name="champsImage">Lien URL (.jpg, .png, ...)</string>

    <string name="createurAjoutMotifTitre">Créateur</string>
    <string name="champsCreateur">Créateur du motif</string>

    <string name="typeAjoutMotifTitre">Type</string>
    <string name="champsMotifBase">Base</string>
    <string name="champsMotifPersonnalise">Personnalisé</string>

    <string name="ajouterBouton">Ajouter</string>

    <!--_________________________________ MODIFIER _________________________________-->
    <string name="modifierMotif">Modifier un motif</string>
    <string name="modifierMotifUnity">Modifier le motif dans Unity</string>

    <string name="nomModifierMotifTitre">Nom</string>
    <string name="imageModifierMotifTitre">Image</string>
    <string name="createurModifierMotifTitre">Créateur</string>
    <string name="typeModifierMotifTitre">Type</string>

    <string name="dateModifierMotifTitre">Date</string>
    <string name="champsDate">Date</string>

    <string name="modifierBouton">Modifier</string>

    <!--_________________________________ SUPPRIMER _________________________________-->


    <!--_________________________________ PARAMÈTRES _________________________________-->
    <string name="qr_code">qr_code</string>
    <string name="generate_qr_code">Génerer le code QR</string>
    <string name="tv_idee_url">Inspirations</string>
    <string name="tv_scanner">Scanner un code QR</string>
    <string name="btnRadioLigth">Thème clair</string>
    <string name="btnRadioDark">Thème sombre</string>


    <!--_________________________________ SCANNER CODE QR _________________________________-->
    <string name="toggle_flash">Toggle Flash</string>
    <string name="scanned_data">Scanner les informations</string>
</resources>