<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beigeLight"
    android:orientation="vertical"
    tools:context=".fragment_register">

    <!-- ____________________________________________________________________ -->
    <!-- TITRE MARKUS -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="472dp"
        android:layout_height="143dp"
        android:layout_above="@id/TvTitreInscription"
        android:layout_marginStart="25dp"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/app_name"
        android:textColorHighlight="@color/blackLight"
        android:textColorLink="@color/blackLight"
        android:textSize="96sp"
        android:textStyle="bold" />

    <!-- TITRE CRÉER UN COMPTE -->
    <TextView
        android:id="@+id/TvTitreInscription"
        android:layout_width="566dp"
        android:layout_height="108dp"
        android:layout_alignBottom="@+id/tv_title"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/rubik_mono_one_regular"
        android:gravity="center_vertical"
        android:text="@string/inscription"
        android:textSize="48sp"
        android:textStyle="bold" />

    <!-- MESSAGES D'ERREUR -->
    <TextView
        android:id="@+id/TVErreurRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/TvTitreInscription"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/redLight"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- CHAMPS NOM UTILISATEUR CRÉER UN COMPTE -->
    <EditText
        android:id="@+id/ETNomRegister"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/nomUserInscription"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="20sp" />

    <!-- CHAMPS MOT DE PASSE CRÉER UN COMPTE -->
    <EditText
        android:id="@+id/ETPwdRegister"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/motDePasseInscription"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="20sp" />

    <!-- CHAMPS RE-ECRIRE MOT DE PASSE CRÉER UN COMPTE -->
    <EditText
        android:id="@+id/ETPwdRegisterAGAIN"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/reEcrireMotDePasseInscription"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="20sp" />

    <!-- ____________________________________________________________________ -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- BOUTON INSCRIPTION -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/inscription"
            android:textColor="@android:color/white" />

        <!-- IMAGEVIEW FLÈCHE GAUCHE -->
        <ImageView
            android:layout_width="71dp"
            android:layout_height="61dp"
            android:layout_above="@id/swipeLeft"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_fleche_gauche" />

        <!-- TEXT GLISSER VERS LA GAUCHE -->
        <TextView
            android:id="@+id/swipeLeft"
            android:layout_width="293dp"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/glisserVersLaDroiteConnexion"
            android:textSize="20sp" />

    </RelativeLayout>

</LinearLayout>