<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/RVLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/beigeLight"
        tools:context=".fragment_login">

    <!-- ____________________________________________________________________ -->
    <!-- TITRE MARKUS -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="472dp"
        android:layout_height="143dp"
        android:layout_above="@id/TVErreurConnexion"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="75dp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/app_name"
        android:textColorHighlight="@color/blackLight"
        android:textColorLink="@color/blackLight"
        android:textSize="96sp"
        android:textStyle="bold" />

    <!-- TITRE CONNEXION -->
    <TextView
        android:id="@+id/TvTitreConnexion"
        android:layout_width="449dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_title"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="-70dp"
        android:fontFamily="@font/rubik_mono_one_regular"
        android:gravity="center_vertical"
        android:text="@string/connexion"
        android:textSize="48sp"
        android:textStyle="bold" />

    <!-- MESSAGE D'ERREUR -->
    <TextView
        android:id="@+id/TVErreurConnexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ETNomUtilisateurConnexion_"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/redLight"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- CHAMPS NOM UTILISATEUR CONNEXION -->
    <EditText
        android:id="@+id/ETNomUtilisateurConnexion_"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_above="@id/ETPwdConnexion_"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/nomConnexion"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="20sp" />


    <!-- CHAMPS MOT DE PASSE CONNEXION -->
    <EditText
        android:id="@+id/ETPwdConnexion_"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/motDePasseConnexion"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="20sp" />

    <!-- BOUTON CONNEXION -->
    <Button
        android:id="@+id/btnConnexion_"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/ETPwdConnexion_"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/connexion"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <!-- IMAGEVIEW FLÈCHE DROIT -->
    <ImageView
        android:layout_width="71dp"
        android:layout_height="61dp"
        android:layout_above="@id/swipeRight"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_fleche_droit" />

    <!-- TEXT GLISSER VERS LA DROITE -->
    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="293dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/glisserVersLaGaucheInscription"
        android:textSize="20sp" />


</RelativeLayout>